2003-07-18  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* Uri.cs: Added MonoTODO'd members, implemented member, fixed signature

2003-05-22  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TempFileCollection.cs: fixed the build under windows.
	
2003-05-07  Ben Maurer <bmaurer@users.sourceforge.net>
	* Uri.cs: Checked in code to fix bug #41998. Some
	code from Ian MacLean.
	
2003-03-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Uri.cs: reworked Segment. Small fix in MakeRelative. Throw exception
	in Parse when host length is 0 and the Uri is not a file.

2003-03-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Uri.cs:
	(CheckSchemeName): fixed bug #28549. Thanks to Eric Runquist.

2003-02-01  Miguel de Icaza  <miguel@ximian.com>

	* Uri.cs (LocalPath): Local path should return un-escaped
	strings.  Patch from tum@veridicus.com (Thong (Tum) Nguyen)

2002-09-16  Duncan Mak  <duncan@ximian.com>

	* Uri.cs (GetObjectData):
	(Uri): The key should be "AbsoluteUri", not "Uri".

2002-09-16  Miguel de Icaza  <miguel@ximian.com>

	* Uri.cs: Implemented a few of the protected methods. 

Mon Jun 17 15:05:05 CEST 2002 Paolo Molaro <lupus@ximian.com>

	* Uri.cs: workaround for mcs bug.

2002-05-28  Lawrence Pit <loz@cable.a2000.nl>

	* Uri.cs: Implemented ctor UriTest (baseUri, relativeUri)
	* Uri.cs: Fixed bug in internal method GetSchemeDelimiter

2002-05-22  Lawrence Pit <loz@cable.a2000.nl>

	* Uri.cs: implemented MakeRelative, improved GetLeftPart
	* UriBuilder.cs: removed Serializable attribute
	* UriHostNameType.cs: added Basic

2002-05-12  Lawrence Pit <loz@cable.a2000.nl>

	* Uri.LocalPath and Uri.AbsoluteUri modified to support both w32 
	and *nix filepaths

2002-05-09  Lawrence Pit <loz@cable.a2000.nl>

	* Uri.GetLeftPart fixed for mailto and news schemes.

2002-05-05  Lawrence Pit <loz@cable.a2000.nl>

	* UriBuilder.cs: Implemented.
	
	* Uri.cs: Complete new reimplementation. 

2002-02-08  Duncan Mak  <duncan@ximian.com>
